# IMOTEP

./: .gitignore  README.md  main_run_simulation.py  pyproject.toml
imotep/input/: demo_shelter_building.py  demo_shelter_building_tree.py  demo_tree.py  geocase.py
imotep/lib_imotep/: airzone.py  imotep.py  panel.py  radiative_sys_geom.py  surface.py
imotep/lib_post/: post_process.py
input/: demo_shelter_building.py  demo_shelter_building_tree.py
lib_pre/geometry/: geomorph.py
