[project]
name = "IMOTEP"
version = "0.1.0"

authors = [
    {name = "Teddy Gresse", email = "teddy.gresse@insa-lyon.fr"},
    {name = "Damien David", email = "damien.david@insa-lyon.fr"},
]

description = "Add your description here"


# keywords = ["key1", "key2", "key3"]

readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "blinker>=1.9.0",
    "certifi>=2026.2.0",
    "charset-normalizer==3.4.0",
    "click>=8.3.0",
    "colorama>=0.4.0",
    "dash>=4.1.0",
    "embreex>=4.4.0",
    "epw>=1.2.dev2",
    "flask>=3.1.0",
    "idna==3.11",
    "importlib-metadata>=9.0.0",
    "itsdangerous>=2.2.0",
    "jinja2==3.1.6",
    "legacy-quadpy>=0.16.10",
    "markupsafe>=3.0.3",
    "narwhals>=2.18.1",
    "nest-asyncio>=1.6.0",
    "numba>=0.65.1",
    "numpy>=2, <=3",
    "packaging==26.0",
    "pandas==3.0.1",
    "plotly>=6, <=7",
    "pvlib>=0.15.0",
    "python-dateutil==2.9.0.post0",
    "pyvista>=0.48.4",
    "pyvistaqt>=0.11.4",
    "requests>=2.33.0",
    "retrying>=1.4.0",
    "scipy>=1.17.1",
    "setuptools==82.0.1",
    "six>=1.17.0",
    "trimesh>=4.12.2",
    "typing-extensions>=4.15.0",
    "tzdata>=2025.3",
    "urllib3>=2.6.0",
    "werkzeug>=3.1.0",
    "zipp>=3.23.0",
]
